--- a/app/src/main/res/layout/cloud_upload.xml
+++ b/app/src/main/res/layout/cloud_upload.xml
@@ -7,7 +7,7 @@
         android:layout_width="120dp"
         android:layout_height="70dp"
         android:text="音楽"
-        android:id="@+id/textView4"
+        android:id="@+id/musictextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
@@ -17,7 +17,7 @@
     <ImageView
         android:layout_width="90dp"
         android:layout_height="70dp"
-        android:id="@+id/imageView6"
+        android:id="@+id/returnView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -26,7 +26,7 @@
     <ImageView
         android:layout_width="90dp"
         android:layout_height="65dp"
-        android:id="@+id/imageView7"
+        android:id="@+id/homeView"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -38,7 +38,7 @@
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/textView4"
+        android:layout_below="@+id/musictextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Name"
-            android:id="@+id/textView6"
+            android:id="@+id/nameView"
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="40dp"
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Data"
-            android:id="@+id/textView7"
+            android:id="@+id/dataView"
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="40dp"
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Type"
-            android:id="@+id/textView10"
+            android:id="@+id/typeView"
             android:layout_weight="1"
             android:textSize="40dp"
             android:gravity="center"
@@ -93,7 +93,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:id="@+id/imageView8"
+        android:id="@+id/graylineView"
         android:src="@mipmap/dot_gray"
         android:scaleType="fitXY"
         android:layout_below="@+id/linearLayout9"
@@ -105,13 +105,13 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_below="@+id/imageView8">
+        android:layout_below="@+id/graylineView">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:layout_below="@+id/imageView8"
+            android:layout_below="@+id/graylineView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
@@ -120,7 +120,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView9"
+                android:id="@+id/noteView"
                 android:layout_weight="0.75"
                 android:src="@mipmap/kigou2"
                 android:scaleType="fitCenter"
@@ -137,7 +137,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="ドラえもんのうた"
-                    android:id="@+id/textView13"
+                    android:id="@+id/musictitleView"
                     android:layout_weight="1"
                     android:textColor="@android:color/black"
                     android:textSize="28dp"
@@ -147,7 +147,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=" 2015/10/12"
-                    android:id="@+id/textView15"
+                    android:id="@+id/musicdataView"
                     android:layout_weight="1"
                     android:textSize="28dp"
                     android:textColor="@android:color/black"
@@ -173,5 +173,18 @@
             android:layout_alignParentStart="true"
             android:layout_marginTop="15dp" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/textView4"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/linearLayout9"
+        android:layout_alignStart="@+id/linearLayout9"
+        android:text="写真/動画/音楽/その他"
+        android:textSize="50dp"
+        android:textColor="@android:color/white"
+        android:background="#ff007cff"
+        android:gravity="center" />
 
 </RelativeLayout>
