--- a/app/src/main/res/layout/cloud_upload.xml
+++ b/app/src/main/res/layout/cloud_upload.xml
@@ -105,7 +105,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_below="@+id/graylineView">
+        android:layout_below="@+id/graylineView"
+        android:id="@+id/linearLayout10">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -121,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/noteView"
-                android:layout_weight="0.75"
+                android:layout_weight="1"
                 android:src="@mipmap/kigou2"
                 android:scaleType="fitCenter"
                 android:layout_marginLeft="15dp" />
@@ -158,7 +159,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/imageView10"
-                android:layout_weight="2" />
+                android:layout_weight="1.5"
+                android:src="@mipmap/download_from_cloud_100"
+                android:scaleType="fitXY" />
 
         </LinearLayout>
 
@@ -175,16 +178,38 @@
     </LinearLayout>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
         android:id="@+id/textView4"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/linearLayout9"
-        android:layout_alignStart="@+id/linearLayout9"
-        android:text="写真/動画/音楽/その他"
+        android:text="写真/動画"
         android:textSize="50dp"
-        android:textColor="@android:color/white"
-        android:background="#ff007cff"
+        android:background="@drawable/layout_shape"
+        android:gravity="center"
+        android:layout_above="@+id/textView6"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:text="音楽"
+        android:id="@+id/textView6"
+        android:layout_above="@+id/textView7"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:background="@drawable/layout_shape"
+        android:textSize="50dp"
+        android:gravity="center" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:text="その他"
+        android:id="@+id/textView7"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/textView4"
+        android:layout_alignStart="@+id/textView4"
+        android:background="@drawable/layout_shape"
+        android:textSize="50dp"
         android:gravity="center" />
 
 </RelativeLayout>
