--- a/app/src/main/res/layout/cloud_upload.xml
+++ b/app/src/main/res/layout/cloud_upload.xml
@@ -158,7 +158,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView10"
+                android:id="@+id/cloudView"
                 android:layout_weight="1.5"
                 android:src="@mipmap/download_from_cloud_100"
                 android:scaleType="fitXY" />
@@ -168,7 +168,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:id="@+id/imageView11"
+            android:id="@+id/graylineView2"
             android:src="@mipmap/dot_gray"
             android:scaleType="fitXY"
             android:layout_below="@+id/linearLayout9"
@@ -189,12 +189,12 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:id="@+id/textView4"
+            android:id="@+id/photo_movieView"
             android:text="写真/動画"
             android:textSize="50dp"
             android:background="@drawable/layout_design"
             android:gravity="center"
-            android:layout_above="@+id/textView6"
+            android:layout_above="@+id/musicView"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
             android:textColor="@android:color/white" />
@@ -203,8 +203,8 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:text="音楽"
-            android:id="@+id/textView6"
-            android:layout_above="@+id/textView7"
+            android:id="@+id/musicView"
+            android:layout_above="@+id/otherView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:background="@drawable/layout_design"
@@ -217,10 +217,10 @@
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:text="その他"
-            android:id="@+id/textView7"
+            android:id="@+id/otherView"
             android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/textView4"
-            android:layout_alignStart="@+id/textView4"
+            android:layout_alignLeft="@+id/photo_movieView"
+            android:layout_alignStart="@+id/photo_movieView"
             android:background="@drawable/layout_design"
             android:textSize="50dp"
             android:gravity="center"
