--- a/app/src/main/res/layout/cloud_upload.xml
+++ b/app/src/main/res/layout/cloud_upload.xml
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="Data"
-            android:id="@+id/dataView"
+            android:id="@+id/datatextView"
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="40dp"
