--- a/app/src/main/res/layout/cloud_document.xml
+++ b/app/src/main/res/layout/cloud_document.xml
@@ -7,7 +7,7 @@
         android:layout_width="300dp"
         android:layout_height="70dp"
         android:text="ドキュメント"
-        android:id="@+id/musictextView"
+        android:id="@+id/phototextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="45dp"
@@ -38,7 +38,7 @@
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/musictextView"
+        android:layout_below="@+id/phototextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
