--- a/app/src/main/res/layout/clpud_photo.xml
+++ b/app/src/main/res/layout/clpud_photo.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="120dp"
         android:layout_height="70dp"
-        android:text="音楽"
+        android:text="写真"
         android:id="@+id/phototextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -59,35 +59,36 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Name"
-            android:id="@+id/nameView"
-            android:layout_weight="1"
+            android:text="List"
+            android:id="@+id/listView"
             android:gravity="center"
-            android:textSize="40dp"
+            android:textSize="35dp"
             android:textColor="#ff007cff"
-            android:background="@drawable/layout_shape" />
+            android:background="@drawable/layout_shape"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Data"
-            android:id="@+id/datatextView"
-            android:layout_weight="1"
+            android:text="Thumbs"
+            android:id="@+id/thumbsView"
             android:gravity="center"
-            android:textSize="40dp"
+            android:textSize="35dp"
             android:textColor="#ff007cff"
-            android:background="@drawable/layout_shape" />
+            android:background="@drawable/layout_shape"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Type"
-            android:id="@+id/typeView"
-            android:layout_weight="1"
-            android:textSize="40dp"
+            android:text="Year"
+            android:id="@+id/yearView"
+            android:textSize="35dp"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:background="@drawable/layout_line" />
+            android:background="@drawable/layout_line"
+            android:layout_weight="1" />
+
     </LinearLayout>
 
     <ImageView
@@ -102,143 +103,151 @@
         android:background="@android:color/darker_gray" />
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="135dp"
-        android:layout_below="@+id/graylineView"
-        android:id="@+id/linearLayout10">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="105dp"
-            android:layout_below="@+id/graylineView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/noteView"
-                android:layout_weight="1"
-                android:src="@mipmap/kigou2"
-                android:scaleType="fitCenter"
-                android:layout_marginLeft="15dp" />
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:layout_marginLeft="50dp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ドラえもんのうた"
-                    android:id="@+id/musictitleView"
-                    android:layout_weight="1"
-                    android:textColor="@android:color/black"
-                    android:textSize="28dp"
-                    android:gravity="center_vertical" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=" 2015/10/12"
-                    android:id="@+id/musicdataView"
-                    android:layout_weight="1"
-                    android:textSize="28dp"
-                    android:textColor="@android:color/black"
-                    android:gravity="center_vertical" />
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/cloudView"
-                android:layout_weight="1.5"
-                android:src="@mipmap/download_from_cloud_100"
-                android:scaleType="fitXY" />
-
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:id="@+id/graylineView2"
-            android:scaleType="fitXY"
-            android:layout_below="@+id/linearLayout9"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="15dp"
-            android:background="@android:color/darker_gray" />
-    </LinearLayout>
-
-    <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="105dp"
-        android:layout_below="@+id/linearLayout10"
+        android:layout_height="130dp"
+        android:layout_below="@+id/graylineView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout14">
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:id="@+id/linearLayout15">
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/noteView2"
-            android:layout_weight="1"
-            android:src="@mipmap/kigou2"
-            android:scaleType="fitCenter"
-            android:layout_marginLeft="15dp" />
+            android:id="@+id/photoView"
+            android:layout_weight="1.75"
+            android:background="@android:color/black" />
 
         <LinearLayout
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:layout_marginLeft="50dp" >
+            android:layout_weight="1">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="アンパンマンマーチ"
-                android:id="@+id/musictitleView2"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:text="Img.png"
+                android:id="@+id/filenameView"
                 android:textColor="@android:color/black"
-                android:textSize="28dp"
-                android:gravity="center_vertical" />
+                android:layout_weight="1"
+                android:textSize="35dp"
+                android:gravity="center|start" />
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text=" 2015/10/12"
-                android:id="@+id/musicdataView2"
-                android:layout_weight="1"
-                android:textSize="28dp"
+                android:layout_height="match_parent"
+                android:text="アップロード日"
+                android:id="@+id/uploadView"
                 android:textColor="@android:color/black"
-                android:gravity="center_vertical" />
+                android:layout_weight="1.5"
+                android:textSize="25dp"
+                android:gravity="center|start" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="2015/12/7"
+                android:id="@+id/filedataView"
+                android:textColor="@android:color/black"
+                android:layout_weight="1.5"
+                android:textSize="25dp"
+                android:gravity="center|start" />
         </LinearLayout>
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/playView"
-            android:layout_weight="1.5"
-            android:src="@mipmap/playfilled"
-            android:scaleType="center" />
+            android:id="@+id/cloudView"
+            android:layout_weight="2"
+            android:src="@mipmap/download_from_cloud_100" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:id="@+id/graylineView3"
-        android:layout_below="@+id/linearLayout14"
+        android:layout_height="2dp"
+        android:id="@+id/graylineView2"
+        android:scaleType="fitXY"
+        android:background="@android:color/darker_gray"
+        android:layout_below="@+id/linearLayout15"
+        android:layout_alignRight="@+id/linearLayout15"
+        android:layout_alignEnd="@+id/linearLayout15"
+        android:layout_marginTop="10dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:id="@+id/linearLayout16"
+        android:layout_alignTop="@+id/graylineView2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/photoView2"
+            android:layout_weight="1.75"
+            android:background="@android:color/black" />
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Img.png"
+                android:id="@+id/filenameView2"
+                android:textColor="@android:color/black"
+                android:layout_weight="1"
+                android:textSize="35dp"
+                android:gravity="center|start" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="アップロード日"
+                android:id="@+id/uploadView2"
+                android:textColor="@android:color/black"
+                android:layout_weight="1.5"
+                android:textSize="25dp"
+                android:gravity="center|start" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="2015/12/7"
+                android:id="@+id/filedataView2"
+                android:textColor="@android:color/black"
+                android:layout_weight="1.5"
+                android:textSize="25dp"
+                android:gravity="center|start" />
+        </LinearLayout>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/cloudView2"
+            android:layout_weight="2" />
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:id="@+id/graylineView3"
+        android:layout_below="@+id/linearLayout16"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
         android:background="@android:color/darker_gray" />
 
     <ImageView
@@ -249,5 +258,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:src="@mipmap/plusfield" />
+
 
 </RelativeLayout>
