--- a/app/src/main/res/layout/cloud_movie_thumbs.xml
+++ b/app/src/main/res/layout/cloud_movie_thumbs.xml
@@ -6,13 +6,13 @@
     <TextView
         android:layout_width="120dp"
         android:layout_height="70dp"
-        android:text="写真"
+        android:text="動画"
         android:id="@+id/drivetextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
         android:textColor="@android:color/black"
-        android:gravity="center" />
+        android:gravity="center_horizontal" />
 
     <ImageView
         android:layout_width="90dp"
@@ -116,33 +116,61 @@
             android:layout_height="140dp"
             android:layout_margin="5dp">
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/photoimageView"
                 android:layout_weight="1"
                 android:background="@android:color/black"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+                android:layout_marginBottom="5dp">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:id="@+id/photoimageView2"
-                android:layout_weight="1"
-                android:layout_margin="5dp"
-                android:background="@android:color/black" />
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageView6"
+                    android:src="@mipmap/download_from_cloud_100"
+                    android:layout_gravity="bottom|right"
+                    android:adjustViewBounds="false"
+                    android:background="@android:color/white"
+                    android:alpha="0.4" />
+            </FrameLayout>
 
-            <ImageView
-                android:layout_width="wrap_content"
+            <FrameLayout
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/photoimageView3"
                 android:layout_weight="1"
                 android:background="@android:color/black"
-                android:layout_marginRight="5dp"
+                android:layout_margin="5dp">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageView7"
+                    android:src="@mipmap/download_from_cloud_100"
+                    android:layout_gravity="bottom|right"
+                    android:background="@android:color/white"
+                    android:alpha="0.4" />
+            </FrameLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@android:color/black"
                 android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" />
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp">
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/imageView8"
+                    android:src="@mipmap/download_from_cloud_100"
+                    android:layout_gravity="bottom|right"
+                    android:background="@android:color/white"
+                    android:alpha="0.4" />
+            </FrameLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -155,6 +183,5 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:src="@mipmap/plusfield" />
-
 
 </RelativeLayout>
