--- a/app/src/main/res/layout/cloud_movie_list.xml
+++ b/app/src/main/res/layout/cloud_movie_list.xml
@@ -6,13 +6,13 @@
     <TextView
         android:layout_width="120dp"
         android:layout_height="70dp"
-        android:text="写真"
+        android:text="動画"
         android:id="@+id/drivetextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
         android:textColor="@android:color/black"
-        android:gravity="center" />
+        android:gravity="center_horizontal" />
 
     <ImageView
         android:layout_width="90dp"
@@ -130,7 +130,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Img.png"
+                android:text="Img"
                 android:id="@+id/filenameView"
                 android:textColor="@android:color/black"
                 android:layout_weight="1"
@@ -194,7 +194,9 @@
             android:layout_height="match_parent"
             android:id="@+id/photoView2"
             android:layout_weight="1.75"
-            android:background="@android:color/black" />
+            android:background="@android:color/white"
+            android:src="@mipmap/playfilled"
+            android:scaleType="center" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -205,7 +207,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="ドラえもん.png"
+                android:text="ドラえもん"
                 android:id="@+id/filenameView2"
                 android:textColor="@android:color/black"
                 android:layout_weight="1"
@@ -258,6 +260,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:src="@mipmap/plusfield" />
+
 
 
 </RelativeLayout>
