--- a/app/src/main/res/layout/cloud_photo_year.xml
+++ b/app/src/main/res/layout/cloud_photo_year.xml
@@ -7,7 +7,7 @@
         android:layout_width="120dp"
         android:layout_height="70dp"
         android:text="写真"
-        android:id="@+id/phototextView"
+        android:id="@+id/drivetextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
@@ -38,7 +38,7 @@
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/phototextView"
+        android:layout_below="@+id/drivetextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -189,4 +189,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
+
 </RelativeLayout>
