--- a/app/src/main/res/layout/cloud_upload.xml
+++ b/app/src/main/res/layout/cloud_upload.xml
@@ -7,12 +7,12 @@
         android:layout_width="120dp"
         android:layout_height="70dp"
         android:text="音楽"
-        android:id="@+id/phototextView"
+        android:id="@+id/drivetextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="50dp"
         android:textColor="@android:color/black"
-        android:gravity="center_horizontal" />
+        android:gravity="center" />
 
     <ImageView
         android:layout_width="90dp"
@@ -38,7 +38,7 @@
         android:id="@+id/blacklineView"
         android:src="@mipmap/dot_black"
         android:scaleType="fitXY"
-        android:layout_below="@+id/phototextView"
+        android:layout_below="@+id/drivetextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
