--- a/app/src/main/res/layout/cloud_drive_inside.xml
+++ b/app/src/main/res/layout/cloud_drive_inside.xml
@@ -26,11 +26,12 @@
     <ImageView
         android:layout_width="90dp"
         android:layout_height="65dp"
-        android:id="@+id/homeView"
+        android:id="@+id/configView"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:src="@mipmap/home_100" />
+        android:src="@mipmap/settings_filled100"
+        android:layout_marginTop="3dp" />
 
     <ImageView
         android:layout_width="match_parent"
