--- a/app/src/main/res/layout/atesaki.xml
+++ b/app/src/main/res/layout/atesaki.xml
@@ -8,10 +8,11 @@
         android:layout_height="70dp"
         android:id="@+id/headView"
         android:text="連絡先を選択"
-        android:textSize="65px"
+        android:textSize="50dp"
         android:textColor="#ff000000"
         android:layout_alignBottom="@+id/blacklineView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
         android:layout_height="55dp"
         android:text="端末の連絡先"
         android:id="@+id/textView3"
-        android:textSize="55px"
+        android:textSize="40dp"
         android:textColor="#ff000000"
         android:layout_below="@+id/blacklineView"
         android:layout_centerHorizontal="true" />
@@ -66,8 +67,8 @@
                 android:text="あ"
                 android:id="@+id/rendView"
                 android:textSize="60dp"
-                android:textColor="@android:color/black"
-                android:background="#ff007cff"
+                android:textColor="#ff007cff"
+                android:background="#ffffff"
                 android:paddingLeft="30dp" />
 
             <ImageView
@@ -96,8 +97,8 @@
                 android:text="か"
                 android:id="@+id/textView5"
                 android:textSize="60dp"
-                android:textColor="@android:color/black"
-                android:background="#ff007cff"
+                android:textColor="#ff007cff"
+                android:background="#ffffff"
                 android:paddingLeft="30dp" />
 
             <ImageView
